# everything-thats-happening

./: README.md
data/: programm-kulturwerk.txt
extractor/: .gitignore  README.md  extraction_results.jsonl  pyproject.toml  visualization.html
extractor/src/extractor/: main.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
