[project]
name = "extractor"
version = "0.1.0"
description = ""
authors = [
    {name = "sigalor",email = "nalenz@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langextract (>=1.0.9,<2.0.0)"
]

[tool.poetry]
packages = [{include = "extractor", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
